# slamtrader

./: .flake8  .gitignore  README.md  config_example.py  mish.py  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  trade.py  tt.py
.github/workflows/: python-app.yml  tests.yml
brokers/: tdameritrade.py  test_tdameritrade.py
src/slamtrader/: mish.py
src/slamtrader/brokers/: tdameritrade.py
tests/: test_mish.py
tests/brokers/: test_tdameritrade.py
