[tool.poetry]
name = "slamtrader"
version = "0.1.0"
description = "Scripts to manage my own portfolios"
authors = ["Sahn Lam <slam@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tda-api = "^0.6.1"
webdriver-manager = "^3.2.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"

[tool.poetry.scripts]
mish = "slamtrader.mish:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

